# leg_chassis

./: .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  README.md  STM32H723XG_FLASH.ld  enginex.ioc
Core/Inc/: FreeRTOSConfig.h  stm32h7xx_it.h  tim.h
Core/Src/: dma.c  fdcan.c  freertos.c  gpio.c  main.c  stm32h7xx_it.c  tim.c  usart.c
Drivers/STM32H7xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
Drivers/STM32H7xx_HAL_Driver/Src/: stm32h7xx_hal_uart.c
application/: robot.c  robot_def.h
application/chassis/: chassis.c  chassis.h  chassis.md
application/chassis_algorithm/: Chassis_Calculate.c  Chassis_Calculate.h  velocity_observer.c  velocity_observer.h
application/chassis_comm/: chassis_comm.c  chassis_comm.h
application/cmd/: robot_cmd.c
application/gimbal/: gimbal.c  gimbal.h
application/gimbal_algorithm/: gimbal_algorithm.c  gimbal_algorithm.h
application/shoot/: shoot.c  shoot.h
bsp/: bsp_init.h
bsp/can/: bsp_can.c  bsp_can.h  bsp_can.md
bsp/dwt/: bsp_dwt.c  bsp_dwt.h  bsp_dwt.md
bsp/gpio/: bsp_gpio.c
bsp/pwm/: bsp_pwm.c  bsp_pwm.h
bsp/spi/: bsp_spi.c  bsp_spi.h
bsp/tim/: bsp_tim.c  bsp_tim.h
bsp/usart/: bsp_usart.c  bsp_usart.h
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
hgc_matlab/: get_k.m  get_k_length.asv  get_k_length.m
modules/: general_def.h
modules/alarm/: buzzer.c  buzzer.h
modules/algorithm/: controller.c  matrix.c  matrix.h
modules/board2board/: board2board.c
modules/daemon/: daemon.c  daemon.h
modules/imu/bmi088/: bmi088.c  bmi088.h  bmi088_regNdef.h
modules/imu/board_imu/: BMI088Middleware.c  BMI088driver.c  ins_task.c  ins_task.h  q.md
modules/imu/zf_imu/: zf_imu.c  zf_imu.h
modules/minipc_comm/: minipc_comm.c  minipc_comm.h
modules/motor/: motor_def.h  motor_task.c  motor_task.h
modules/motor/DJImotor/: dji_motor.c  dji_motor.h
modules/motor/DMmotor/: dmmotor.c  dmmotor.h
modules/motor/LKmotor/: LK9025.c  LK9025.h
modules/referee/referee_mc/: referee_UI.h  referee_mc_protocol.h  referee_mc_task.h  rm_referee.c
modules/referee/referee_pt/: referee_pt.c  referee_pt.h
modules/remote/: remote_control.c  remote_control.h
modules/usart_modules/: usart_task.c  usart_task.h
modules/usart_modules/minipc_comm/: minipc_comm.c  minipc_comm.h
modules/usart_modules/referee/referee_mc/: referee_mc_task.c  rm_referee.c  rm_referee.h
modules/usart_modules/referee/referee_pt/: referee_pt.c
modules/usart_modules/remote/: remote_control.c  remote_control.md
modules/usart_modules/zf_imu/: zf_imu.c
sju_matlab/: HerKules_VOCAL_SJ_LQR_v4_with_data.m
sju_matlab/wheel_matlab/: wheel7.csv  wheel_matlab1.m
